[metadata]
name = pywebauthn
version = 0.0.1
author = Q Misell (AS207960 Cyfyngedig)
author_email = q@as207960.net
description = Server side WebAuthn handling, with support for FaceID and FIDO metadata
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/as207960/python-webauthn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cryptography
    cbor2
    certvalidator
    requests

[options.packages.find]
where = src
