[metadata]
name = py-webauthn
version = 0.0.2
author = AS207960 Cyfyngedig
author_email = hello@glauca.digital
description = Server side WebAuthn handling, with support for FaceID and FIDO metadata
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/as207960/python-webauthn
project_urls =
    Bug Tracker = https://github.com/as207960/python-webauthn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cryptography
    cbor2
    certvalidator
    requests

[options.packages.find]
where = src
